# polypartition

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: polypartition.cpp  polypartition.h
test/: CmakeLists.txt  test.cpp
